--- a/_data/top-menu.yml
+++ b/_data/top-menu.yml
@@ -2,7 +2,7 @@
   url:  "https://www.pirati.cz"
   icon: "fa fa-home"
 - link: "wiki.pirati.cz"
-  url:  "https://wiki.pirati.cz"
+  url:  "https://wiki.pirati.cz/regiony/praha/praha8/start"
   icon: "fa fa-home"
 - link: "Pirátské listy"
   url:  "http://www.piratskelisty.cz"
