--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  jekyll
 #theme: jekyll-theme-pirati
 
 # Github pages setting
-baseurl: "example.pirati.cz" # the subpath of your site, e.g. /blog
+baseurl: "praha8.pirati.cz" # the subpath of your site, e.g. /blog
 remote_theme: jitka/jekyll-theme-pirati
 
 
