--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -16,7 +16,7 @@ main:
   - link: /lide/
     name: O nás
     match: lide
-  - link: /komunalni-volby
+  - link: /volby-2018
     name: Komunální volby
     match: komunalni-volby
   - link: /lide/lukas-wagenknecht/
