--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 keywords: piráti, česká pirátská strana, svoboda, demokracie, pirati na osmičce # dobré keywords jsou ty co lidé piší do googlu když hledají naši stránku
 
+administrator:
+  email: jitka.novotna@pirati.cz # mail kam pujdou chybove vystupy
 
 organization:
   name: "Česká pirátská strana - místní sdruženi na Praze 8"
@@ -86,7 +88,7 @@ collections:
     permalink: /lide/:path/
   program:
     output: true
-    permalink: /komunalni-volby-2018/:path/
+    permalink: /volby-2018/:path/
   # Sole purpose is to create candidate lists in separate files.
   candidatelists:
     output: false
