--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -14,7 +14,7 @@ main:
     name: Aktuality
     match: aktuality
   - link: /lide/
-    name: O nás
+    name: Naši lidé
     match: lide
   - link: /volby-2018
     name: Komunální volby
