--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -37,7 +37,7 @@ bottom:
     links:
       - link: /lide/
         name: Lidé
-      - link: /komunalni-volby/
+      - link: /volby-2018
         name: Volby
       - link: /aktuality/
         name: Aktuality
