--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ administrator:
   email: jitka.novotna@pirati.cz # mail kam pujdou chybove vystupy
 
 organization:
-  name: "<br>Praze 8</br>, místní sdružení"
+  name: "<b>Praha 8</b>, místní sdružení"
   short_name: "Piráti Praha 8"
   email: praha8@pirati.cz
   #phone: +420 777 123 456 789
