--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Welcome to Jekyll!
-title: Pirati
+title: Pirati Praha 8
 email: info@pirati.cz
 description: >- # this means to ignore newlines until "baseurl:"
   Česká pirátská strana - místní sdruženi na Praze 8
