--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ defaults:   # defaults values for collection scope
     scope:
       path: "_people"
     values:
-      layout: "page"
+      layout: "person"
       rbar: 
         - foto
         - personContact
@@ -134,7 +134,7 @@ assets:
       - "last 2 versions"
       - "IE > 9"
   sources:
-    - vendor/bundle/ruby/2.5.0/gems/jekyll-theme-pirati-7.0.0/_sass
+    - vendor/bundle/ruby/2.5.0/gems/jekyll-theme-pirati-7.2.0/_sass
     - assets/css
     - assets/fonts
     - assets/video
