--- a/_data/program.yml
+++ b/_data/program.yml
@@ -2,13 +2,13 @@
   id: 1
   title: Otevřená a moderní radnice
   desc: Uděláme z Prahy nejtransparentnější město v Česku. Dnes má Praha problém hlavně s neprůhlednými městskými firmami, které hospodaří s desítkami miliard korun ročně. Občané a protikorupční analytici musí mít k dispozici dostatek informací, aby mohli politiky a úředníky kontrolovat. Zapojíme občany do rozhodování o městě.
-  garant: michal.novak
+  garant: martin.stanek
   redmine: 28177
 -
   id: 2
   title: Bydlení a územní rozvoj
   desc: Pražané v současné době čelí prudkému nárůstu cen nájemního i vlastnického bydlení. Trend nárůstu cen za bydlení je důsledkem nezvládnutého politického a administrativního řízení bytové politiky ze strany státu, magistrátu i některých městských částí. Ve volebním období 2018 - 2022 chceme učinit kroky potřebné pro zastavení tohoto trendu.
-  garant: michal.novak
+  garant: ivo.slavka
   redmine: 28203
 -
   id: 3
@@ -32,5 +32,5 @@
   id: 6
   title: Bezpečnost
   desc: Bezpečnost ano, velký bratr ne!
-  garant: jan.kolar
+  garant: jan.kolator
   redmine: 28305
