--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Pirati Praha 8
 email: info@pirati.cz
 description: >- # this means to ignore newlines until "baseurl:"
-  Česká pirátská strana - místní sdruženi na Praze 8
+  Česká pirátská strana - místní sdružení na Praze 8
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 keywords: piráti, česká pirátská strana, svoboda, demokracie, pirati na osmičce # dobré keywords jsou ty co lidé piší do googlu když hledají naši stránku
 
@@ -15,7 +15,7 @@ organization:
   email: praha8@pirati.cz
   #phone: +420 777 123 456 789
   address: |
-      Na Moráni 3,
+      Na Moráni 3
       120 00 Praha 2
   mapLink: https://mapy.cz/zakladni?x=14.4151543&y=50.0733415&z=18&source=addr&id=9018965&q=Na%20Mor%C3%A1ni%203
   residenceImg:
