--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,7 +15,7 @@ main:
     name: Aktuality
   - link: /lide/
     name: Lidé
-  - link: /komunalni-volby/
+  - link: /volby/2018-komunalni.html?pohled=program
     name: Program
   - link: /kontakt/
     name: Kontakt
