--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 administrator:
   email: pavel.franc@pirati.cz # mail kam pujdou maily o webu
 
-url: "https://praha8.pirati.cz/"
+url: "https://praha8.pir-test.eu/"
 title: "Piráti Praha 8"
 description: "Česká pirátská strana - místní sdružení Praha 8"
 keywords: "piráti, česká pirátská strana, svoboda, demokracie, piráti na osmičce"
