--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,10 @@ contactSummaryItems:
     includeMoreLink: true
   - type: organizationDataBox
   - type: piratiRootWebsite
+  - type: custom
+    iconClass: fa fa-facebook
+    label: Facebook
+    body: <a href="https://www.facebook.com/piratipraha8/" target="_blank">Piráti Praha 8</a>
 
 calendar:
   id: npabehj0rpaqtgo960ju2vjq2s@group.calendar.google.com
