--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ contactSummaryItems:
   - type: organizationDataBox
   - type: piratiRootWebsite
   - type: custom
-    iconClass: fa fa-facebook
-    label: Facebook
-    body: <a href="https://www.facebook.com/piratipraha8/" target="_blank">Piráti Praha 8</a>
+   iconClass: fa fa-facebook
+   label: Facebook
+   body: <a href="https://www.facebook.com/piratipraha8/">@piratipraha8</a>
 
 calendar:
   id: npabehj0rpaqtgo960ju2vjq2s@group.calendar.google.com
