Change tags to stitky

--- a/_config.yml
+++ b/_config.yml
@@ -119,6 +119,7 @@ defaults:   # defaults values for collection scope
          - program
 
 emptyArray: []
+tags_path: /aktuality/stitky.html
 
 assets:
   source_maps: true
