--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ twitter:
   profile: piratipraha
 
 instagram:
-  profilePage: https://www.instagram.com/pirati.cz/
+  profilePage: https://www.instagram.com/piratipraha8
 
 flicker:
   profilePage: https://www.flickr.com/photos/pirati/
