--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ package-lock.json
 .bundle
 vendor
 .DS_Store
+_posts/2022-05-20-prochazka-s-architekty-dablice.md
+assets/img/posts/2022-05-19-prochazka-dablice/dablice1.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice2.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice3.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice4.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice5.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice6.jpeg
+assets/img/posts/2022-05-19-prochazka-dablice/dablice7.jpeg
