--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -22,7 +22,7 @@ main:
       - name: Komunální volby 2018
         link: /volby/2018-komunalni.html
       - name: Senátní volby 2018
-        link: "http://https://lukaswagenknecht.cz"
+        link: "http://www.lukaswagenknecht.cz"
   - name: Rozcestník
     submenu:
       - name: MČ Praha 8
