--- a/_data/campaigns.yml
+++ b/_data/campaigns.yml
@@ -2,9 +2,9 @@
 # election campaings are held at the same time (which saves $$$ for the country).
 
 - groupUid: volby-2018  # identifier of the group, to be used in program point
-  title: Volby 2018     # title of the campaign group
+  title: Komunální volby 2018    # title of the campaign group
   campaigns:
-    - title: Komunální volby  # individual campaigns within the group
+    - title: Pirátský program pro Prahu 8  # individual campaigns within the group
       categoryUid: 2018-komunalni
 
 - groupUid: volby-2022  # identifier of the group, to be used in program point
